<resources>
    <string name="app_name">HangmanGame</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="backButton">Back</string>
    <string name="lost">You lost!</string>
    <string name="won">You won!</string>
    <string name="buttonNewGame">Start New Game</string>
    <string name="buttonDefinition">Word Definition</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="n">N</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="q">Q</string>
    <string name="r">R</string>
    <string name="s">S</string>
    <string name="t">T</string>
    <string name="u">U</string>
    <string name="v">V</string>
    <string name="w">W</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="descriptionImage">HangMan</string>
    <string name="startAgain">Start again</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="email">Email</string>
    <string name="msg">Your ideas/ your opinion</string>
    <string name="send">Send</string>
    <string name="creators">CREATORS</string>
    <string name="authors">MACIEJ OPIELOWSKI</string>
    <string name="authors1">&amp;</string>
    <string name="authors2">GABRIEL MOSKWA</string>
    <string name="profile">Profile</string>
    <string name="score">Score</string>
    <string name="textHang">Do you wanna hang around?</string>
    <string name="hang">Hang</string>
    <string name="userNameText">Write your username:</string>
    <string name="userTextField">Set your username</string>
    <string name="plus">+</string>
    <string name="create">Save</string>
    <string name="user_score">User Score: %d</string>

</resources>