<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/purple_700">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_marginTop="120dp"
        android:id="@+id/editTextTextEmailAddress3"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/email"
        android:textColor="@color/white"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/editTextTextEmailAddress3"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/msg"
        android:textColor="@color/white"
        android:inputType="textMultiLine"
        android:autofillHints="message"
        />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextTextMultiLine"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:text="@string/send" />

</RelativeLayout>